# rge-jam-entry

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: basic2DFragment.shader  basic2DVertex.shader  renderer2d.fs  renderer2d.vs
src/: CMakeLists.txt  game.c  game.h  main.c
src/allocators/: stack_allocator.c  stack_allocator.h
src/core/: assert.c  assert.h  defs.h  error.c  error.h  file.c  file.h  input.c  input.h  log.c  log.h  memory.c  memory.h  state.h  threads.c  threads.h
src/graphics/: gl.c  gl.h  renderer2d.c  renderer2d.h  shader.c  shader.h  texture.c  texture.h
src/states/: main_state.c  main_state.h
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/stb/: CMakeLists.txt
